readable_test/typer/failing/TestArray4.grading.amy
object TestArray5 
val i : Int(32)[] = new Int(32)[10];
i[0] match {
    case true => i[0] = 0
}
end TestArray5